--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ h1{
 button{
 	background-color: #669900;
 	border:none;
+	border-radius: 8px;
 	padding: 15px 32px;
   	margin:auto;
   	display:block;
